--- a/index.html
+++ b/index.html
@@ -6,30 +6,30 @@
      <title>PARV66.inc</title>
      <meta name="title" content="PARV66.inc">
      <meta name="description" content="parv66.inc is a... thing.  yep a thing.    idk what else...    ok bye">
-     <link rel="stylesheet" href="https://parv66.github.io/parv66.inc/style.css">
+     <link rel="stylesheet" href="https://parv66.github.io/style.css">
      <meta property="og:type" content="parv66.github.io/parv66.inc">
      <meta property="og:title" content="PARV66.inc">
      <meta property="og:description" content="PARV66.inc idk what else">
      <meta property="og:url" content="https://parv66.github.io/parv66.inc">
-     <meta property="og:image" content="https://parv66.github.io/parv66.inc/parv66.uwu.jpg">
+     <meta property="og:image" content="https://parv66.github.io/parv66.uwu.jpg">
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
      <script src="key.js"></script>
-     <script src="https://parv66.github.io/parv66.inc/gui/mcbtnclick.js"></script>
-     <script src="https://parv66.github.io/parv66.inc/gui/scrollanimation.js"></script>
-     <script src="https://parv66.github.io/parv66.inc/gui/contextmenu.js"></script>
-     <script src="https://parv66.github.io/parv66.inc/gui/tabui.js"></script>
-     <link rel="stylesheet" href="https://parv66.github.io/parv66.inc/gui/contextmenu.css">
-     <link rel="stylesheet" href="https://parv66.github.io/parv66.inc/gui/scrollanimation.css">
+     <script src="https://parv66.github.io/gui/mcbtnclick.js"></script>
+     <script src="https://parv66.github.io/gui/scrollanimation.js"></script>
+     <script src="https://parv66.github.io/gui/contextmenu.js"></script>
+     <script src="https://parv66.github.io/gui/tabui.js"></script>
+     <link rel="stylesheet" href="https://parv66.github.io/gui/contextmenu.css">
+     <link rel="stylesheet" href="https://parv66.github.io/gui/scrollanimation.css">
   </head>
  <body>
-  <img src="https://parv66.github.io/parv66.inc/logo.png" style="width:99%;margin-left:auto;margin-right:auto;display:block;">
-<div id="contextmenu" style="box-shadow: rgb(0, 0, 0) 2px 0px 0px 0px, rgb(0, 0, 0) 0px -2px 0px 0px, rgb(0, 0, 0) 0px 2px 0px 0px, rgb(0, 0, 0) -2px 0px 0px 0px;width: auto;height: auto;border: 2px solid rgb(44, 8, 99);position: fixed;background-color: rgba(16, 0, 16, 0.94);padding: 0.38em;font-family: minefont;margin: 0.125em 0.25em;z-index: 6420;flex-flow: column wrap;place-content: flex-start;top: 479px;left: 204px;display: flex;flex-direction: column;flex-wrap: nowrap;align-content: center;justify-content: center;align-items: flex-start;"><a style="margin:0;text-shadow:.125em .125em 0 #3e3e3e;color:#fff;cursor:default">Context Menu</a> <a style="color:#55F;text-shadow:.125em .125em 0 #232391;margin:0;cursor:default">Equipment</a><a class="coption" style="margin-top:10px;cursor:default;text-shadow: 0.125em 0.125em 0 #363636;color:#9f9f9f;text-decoration:none;">Accommodation I</a><a class="coption" style="text-shadow:.125em .125em 0 #1f1f1f;color:#555;text-decoration:none" href="https://parv66.github.io/parv66.inc/about">Particularity IV</a> <a class="coption" style="text-shadow:.125em .125em 0 #1f1f1f;color:#555;text-decoration:none" href="https://parv66.github.io/parv66.inc/creations">Creations III</a> <a class="coption" style="text-shadow:.125em .125em 0 #1f1f1f;color:#555;text-decoration:none" href="https://parv66.github.io/parv66.inc/downloads">Downloads IX</a> <a class="coption" style="text-shadow:.125em .125em 0 #1f1f1f;color:#555;text-decoration:none" href="https://parv66.github.io/parv66.inc/random">Random LXIX</a> <a class="coption" style="text-shadow:.125em .125em 0 #1f1f1f;color:#555;text-decoration:none" href="https://parv66.github.io/parv66.inc/contact">Associate II</a> <a class="coption" style="text-shadow:.125em .125em 0 #1f1f1f;color:#555;text-decoration:none" href="https://parv66.github.io/parv66.inc/random/CDXX">???</a> <a style="color:#fff;text-decoration:none;text-shadow:.125em .125em 0 #3e3e3e;margin:0;margin-top:10px;cursor:default">Durability: 69 / 420</a> <a style="text-shadow:.125em .125em 0 #222;margin:0;color:#555;cursor:default">parv66:context_menu</a> <a style="text-shadow:.125em .125em 0 #222;margin:0;color:#555;cursor:default">NBT: 5 tag(s)</a></div>
+  <img src="https://parv66.github.io/logo.png" style="width:99%;margin-left:auto;margin-right:auto;display:block;">
+<div id="contextmenu" style="box-shadow: rgb(0, 0, 0) 2px 0px 0px 0px, rgb(0, 0, 0) 0px -2px 0px 0px, rgb(0, 0, 0) 0px 2px 0px 0px, rgb(0, 0, 0) -2px 0px 0px 0px;width: auto;height: auto;border: 2px solid rgb(44, 8, 99);position: fixed;background-color: rgba(16, 0, 16, 0.94);padding: 0.38em;font-family: minefont;margin: 0.125em 0.25em;z-index: 6420;flex-flow: column wrap;place-content: flex-start;top: 479px;left: 204px;display: flex;flex-direction: column;flex-wrap: nowrap;align-content: center;justify-content: center;align-items: flex-start;"><a style="margin:0;text-shadow:.125em .125em 0 #3e3e3e;color:#fff;cursor:default">Context Menu</a> <a style="color:#55F;text-shadow:.125em .125em 0 #232391;margin:0;cursor:default">Equipment</a><a class="coption" style="margin-top:10px;cursor:default;text-shadow: 0.125em 0.125em 0 #363636;color:#9f9f9f;text-decoration:none;">Accommodation I</a><a class="coption" style="text-shadow:.125em .125em 0 #1f1f1f;color:#555;text-decoration:none" href="https://parv66.github.io/about">Particularity IV</a> <a class="coption" style="text-shadow:.125em .125em 0 #1f1f1f;color:#555;text-decoration:none" href="https://parv66.github.io/creations">Creations III</a> <a class="coption" style="text-shadow:.125em .125em 0 #1f1f1f;color:#555;text-decoration:none" href="https://parv66.github.io/downloads">Downloads IX</a> <a class="coption" style="text-shadow:.125em .125em 0 #1f1f1f;color:#555;text-decoration:none" href="https://parv66.github.io/random">Random LXIX</a> <a class="coption" style="text-shadow:.125em .125em 0 #1f1f1f;color:#555;text-decoration:none" href="https://parv66.github.io/contact">Associate II</a> <a class="coption" style="text-shadow:.125em .125em 0 #1f1f1f;color:#555;text-decoration:none" href="https://parv66.github.io/random/CDXX">???</a> <a style="color:#fff;text-decoration:none;text-shadow:.125em .125em 0 #3e3e3e;margin:0;margin-top:10px;cursor:default">Durability: 69 / 420</a> <a style="text-shadow:.125em .125em 0 #222;margin:0;color:#555;cursor:default">parv66:context_menu</a> <a style="text-shadow:.125em .125em 0 #222;margin:0;color:#555;cursor:default">NBT: 5 tag(s)</a></div>
       <p>sidebar here</p><p> 
   </p><div class="maincage" style="z-index: 5;display: flex;width: 99%;flex-wrap: wrap;flex-direction: row;align-items: center;align-content: center;justify-content: center;">
-   <button id="tabbtnone"class="tabbtn mcbtn tabbtnone"><img src="https://parv66.github.io/parv66.inc/icon/tabicons/article.gif"class="tabicon"><a class="tabtext">Articles</a><br><a class="tabtext2">3</a></button>
-   <button id="tabbtntwo" class="tabbtn mcbtn tabbtntwo"><img src="https://parv66.github.io/parv66.inc/icon/tabicons/cramped%20paper.gif" class="tabicon"><a class="tabtext">Junk</a><br><a class="tabtext2">3</a></button>
-   <button id="tabbtnthree" class="tabbtn mcbtn tabbtnthree"><img src="https://parv66.github.io/parv66.inc/icon/tabicons/links.gif" class="tabicon"><a class="tabtext">links</a><br><a class="tabtext2">8</a></button>
-   <button id="tabbtnfour" class="tabbtn mcbtn tabbtnfour"><img src="https://parv66.github.io/parv66.inc/icon/tabicons/gallery.gif" class="tabicon"><a class="tabtext">Gallery</a><br><a class="tabtext2">0</a></button>
+   <button id="tabbtnone"class="tabbtn mcbtn tabbtnone"><img src="https://parv66.github.io/icon/tabicons/article.gif"class="tabicon"><a class="tabtext">Articles</a><br><a class="tabtext2">3</a></button>
+   <button id="tabbtntwo" class="tabbtn mcbtn tabbtntwo"><img src="https://parv66.github.io/icon/tabicons/cramped%20paper.gif" class="tabicon"><a class="tabtext">Junk</a><br><a class="tabtext2">3</a></button>
+   <button id="tabbtnthree" class="tabbtn mcbtn tabbtnthree"><img src="https://parv66.github.io/icon/tabicons/links.gif" class="tabicon"><a class="tabtext">links</a><br><a class="tabtext2">8</a></button>
+   <button id="tabbtnfour" class="tabbtn mcbtn tabbtnfour"><img src="https://parv66.github.io/icon/tabicons/gallery.gif" class="tabicon"><a class="tabtext">Gallery</a><br><a class="tabtext2">0</a></button>
     <div id="tabone" class="tabindex tabone"></div>
     <div id="tabtwo" class="tabindex tabtwo"></div>
     <div id="tabthree" class="tabindex tabthree"></div>
