--- a/404.html
+++ b/404.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="https://parv66.github.io/parv66.inc/style.css">
+    <link rel="stylesheet" href="https://parv66.github.io/style.css">
     <title>Error: page does not exists</title>
-    <script src="https://parv66.github.io/parv66.inc/gui/mcbtnclick.js"></script>
+    <script src="https://parv66.github.io/gui/mcbtnclick.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </head>
 <body>
-<button class="button mcbtn" id="fofbtnerror" style="display: none" onclick="location.href = 'https://parv66.github.io/parv66.inc/404/'">press this if you see this</button>
+<button class="button mcbtn" id="fofbtnerror" style="display: none" onclick="location.href = 'https://parv66.github.io/404/'">press this if you see this</button>
   <script>
   window.onload=function(){
-    location.href = "https://parv66.github.io/parv66.inc/404/";
+    location.href = "https://parv66.github.io/404/";
     setTimeout(function(){
       var FoFbtn = document.querySelector('#fofbtnerror');
       FoFbtn.style.display="block";
