--- a/contact/index.html
+++ b/contact/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <title>Contact PARV66</title>
-    <link rel="stylesheet" href="https://parv66.github.io/parv66.inc/style.css">
-    <link rel="stylesheet" href="https://parv66.github.io/parv66.inc/gui/itemhover.css">
-    <script src="https://parv66.github.io/parv66.inc/gui/itemhover.js"></script>
-    <script src="https://parv66.github.io/parv66.inc/gui/mcbtnclick.js"></script>
+    <link rel="stylesheet" href="https://parv66.github.io/style.css">
+    <link rel="stylesheet" href="https://parv66.github.io/gui/itemhover.css">
+    <script src="https://parv66.github.io/gui/itemhover.js"></script>
+    <script src="https://parv66.github.io/gui/mcbtnclick.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </head>
   <body>
