--- a/creations/index.html
+++ b/creations/index.html
@@ -1,18 +1,18 @@
 <html><head>
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="creations.css">
-    <link rel="stylesheet" href="https://parv66.github.io/parv66.inc/style.css">
-    <link rel="stylesheet" href="https://parv66.github.io/parv66.inc/gui/addonitems.css">
-    <link rel="stylesheet" href="https://parv66.github.io/parv66.inc/gui/itemhover.css">
-    <meta property="og:type" content="parv66.github.io/parv66.inc/creations/">
+    <link rel="stylesheet" href="https://parv66.github.io/style.css">
+    <link rel="stylesheet" href="https://parv66.github.io/gui/addonitems.css">
+    <link rel="stylesheet" href="https://parv66.github.io/gui/itemhover.css">
+    <meta property="og:type" content="parv66.github.io/creations/">
     <meta property="og:title" content="creatiiooonnnnssssss">
     <meta property="og:description" content="Creations, am i right?">
-    <meta property="og:url" content="https://parv66.github.io/parv66.inc/creations/">
-    <meta property="og:image" content="https://parv66.github.io/parv66.inc/parv66.uwu.jpg">
-    <link rel="stylesheet" href="https://parv66.github.io/parv66.inc/gui/contextmenu.css">
+    <meta property="og:url" content="https://parv66.github.io/creations/">
+    <meta property="og:image" content="https://parv66.github.io/parv66.uwu.jpg">
+    <link rel="stylesheet" href="https://parv66.github.io/gui/contextmenu.css">
   </head>
   <body>
-    <div id="contextmenu" style="box-shadow: rgb(0, 0, 0) 2px 0px 0px 0px, rgb(0, 0, 0) 0px -2px 0px 0px, rgb(0, 0, 0) 0px 2px 0px 0px, rgb(0, 0, 0) -2px 0px 0px 0px; width: auto; height: auto; border: 2px solid rgb(44, 8, 99); position: fixed; background-color: rgba(16, 0, 16, 0.94); padding: 0.38em; font-family: minefont; margin: 0.125em 0.25em; z-index: 6420; display: flex; flex-flow: column wrap; place-content: flex-start; top: 1px; left: 1px;"><a style="margin:0;text-shadow:.125em .125em 0 #3e3e3e;color:#fff;cursor:default">Context Menu</a> <a style="color:#55F;text-shadow:.125em .125em 0 #232391;margin:0;cursor:default">Equipment</a> <a class="coption" style="margin-top:10px;color:#555;text-decoration:none;text-shadow: 0.125em 0.125em 0 #1f1f1f;" href="https://parv66.github.io/parv66.inc/">Accommodation I</a> <a class="coption" style="text-shadow:.125em .125em 0 #1f1f1f;color:#555;text-decoration:none" href="https://parv66.github.io/parv66.inc/about">Particularity IV</a> <a class="coption" style="text-shadow: 0.125em 0.125em 0 #363636;color: #9f9f9f;text-decoration:none;cursor: default;">Creations III</a> <a class="coption" style="text-shadow:.125em .125em 0 #1f1f1f;color:#555;text-decoration:none" href="https://parv66.github.io/parv66.inc/downloads">Downloads IX</a> <a class="coption" style="text-shadow:.125em .125em 0 #1f1f1f;color:#555;text-decoration:none" href="https://parv66.github.io/parv66.inc/random">Random LXIX</a> <a class="coption" style="text-shadow:.125em .125em 0 #1f1f1f;color:#555;text-decoration:none" href="https://parv66.github.io/parv66.inc/contact">Associate II</a> <a class="coption" style="text-shadow:.125em .125em 0 #1f1f1f;color:#555;text-decoration:none" href="https://parv66.github.io/parv66.inc/random/CDXX">???</a> <a style="color:#fff;text-decoration:none;text-shadow:.125em .125em 0 #3e3e3e;margin:0;margin-top:10px;cursor:default">Durability: 69 / 420</a> <a style="text-shadow:.125em .125em 0 #222;margin:0;color:#555;cursor:default">parv66:context_menu</a> <a style="text-shadow:.125em .125em 0 #222;margin:0;color:#555;cursor:default">NBT: 5 tag(s)</a></div>   <img class="chest" src="https://parv66.github.io/parv66.inc/chest.png">
+    <div id="contextmenu" style="box-shadow: rgb(0, 0, 0) 2px 0px 0px 0px, rgb(0, 0, 0) 0px -2px 0px 0px, rgb(0, 0, 0) 0px 2px 0px 0px, rgb(0, 0, 0) -2px 0px 0px 0px; width: auto; height: auto; border: 2px solid rgb(44, 8, 99); position: fixed; background-color: rgba(16, 0, 16, 0.94); padding: 0.38em; font-family: minefont; margin: 0.125em 0.25em; z-index: 6420; display: flex; flex-flow: column wrap; place-content: flex-start; top: 1px; left: 1px;"><a style="margin:0;text-shadow:.125em .125em 0 #3e3e3e;color:#fff;cursor:default">Context Menu</a> <a style="color:#55F;text-shadow:.125em .125em 0 #232391;margin:0;cursor:default">Equipment</a> <a class="coption" style="margin-top:10px;color:#555;text-decoration:none;text-shadow: 0.125em 0.125em 0 #1f1f1f;" href="https://parv66.github.io/">Accommodation I</a> <a class="coption" style="text-shadow:.125em .125em 0 #1f1f1f;color:#555;text-decoration:none" href="https://parv66.github.io/about">Particularity IV</a> <a class="coption" style="text-shadow: 0.125em 0.125em 0 #363636;color: #9f9f9f;text-decoration:none;cursor: default;">Creations III</a> <a class="coption" style="text-shadow:.125em .125em 0 #1f1f1f;color:#555;text-decoration:none" href="https://parv66.github.io/downloads">Downloads IX</a> <a class="coption" style="text-shadow:.125em .125em 0 #1f1f1f;color:#555;text-decoration:none" href="https://parv66.github.io/random">Random LXIX</a> <a class="coption" style="text-shadow:.125em .125em 0 #1f1f1f;color:#555;text-decoration:none" href="https://parv66.github.io/contact">Associate II</a> <a class="coption" style="text-shadow:.125em .125em 0 #1f1f1f;color:#555;text-decoration:none" href="https://parv66.github.io/random/CDXX">???</a> <a style="color:#fff;text-decoration:none;text-shadow:.125em .125em 0 #3e3e3e;margin:0;margin-top:10px;cursor:default">Durability: 69 / 420</a> <a style="text-shadow:.125em .125em 0 #222;margin:0;color:#555;cursor:default">parv66:context_menu</a> <a style="text-shadow:.125em .125em 0 #222;margin:0;color:#555;cursor:default">NBT: 5 tag(s)</a></div>   <img class="chest" src="https://parv66.github.io/chest.png">
     <div id="minetip-tooltip" style="display: none; position: absolute; top: 273px; left: 313px;">Copper++ Addon</div>
     <div class="main1">
   <h1>Large Chest</h1>
@@ -79,8 +79,8 @@
   </div>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://parv66.github.io/parv66.inc/creations/creations.js"></script>
-<script src="https://parv66.github.io/parv66.inc/gui/contextmenu.js"></script>
-<script src="https://parv66.github.io/parv66.inc/gui/itemhover.js"></script>
+<script src="https://parv66.github.io/creations/creations.js"></script>
+<script src="https://parv66.github.io/gui/contextmenu.js"></script>
+<script src="https://parv66.github.io/gui/itemhover.js"></script>
 
 </body></html>
