--- a/index.html
+++ b/index.html
@@ -23,17 +23,24 @@
   </head>
  <body>
   <img src="https://parv66.github.io/logo.png" style="width:99%;margin-left:auto;margin-right:auto;display:block;">
-<div id="contextmenu" style="box-shadow: rgb(0, 0, 0) 2px 0px 0px 0px, rgb(0, 0, 0) 0px -2px 0px 0px, rgb(0, 0, 0) 0px 2px 0px 0px, rgb(0, 0, 0) -2px 0px 0px 0px;width: auto;height: auto;border: 2px solid rgb(44, 8, 99);position: fixed;background-color: rgba(16, 0, 16, 0.94);padding: 0.38em;font-family: minefont;margin: 0.125em 0.25em;z-index: 6420;flex-flow: column wrap;place-content: flex-start;top: 479px;left: 204px;display: flex;flex-direction: column;flex-wrap: nowrap;align-content: center;justify-content: center;align-items: flex-start;"><a style="margin:0;text-shadow:.125em .125em 0 #3e3e3e;color:#fff;cursor:default">Context Menu</a> <a style="color:#55F;text-shadow:.125em .125em 0 #232391;margin:0;cursor:default">Equipment</a><a class="coption" style="margin-top:10px;cursor:default;text-shadow: 0.125em 0.125em 0 #363636;color:#9f9f9f;text-decoration:none;">Accommodation I</a><a class="coption" style="text-shadow:.125em .125em 0 #1f1f1f;color:#555;text-decoration:none" href="https://parv66.github.io/about">Particularity IV</a> <a class="coption" style="text-shadow:.125em .125em 0 #1f1f1f;color:#555;text-decoration:none" href="https://parv66.github.io/creations">Creations III</a> <a class="coption" style="text-shadow:.125em .125em 0 #1f1f1f;color:#555;text-decoration:none" href="https://parv66.github.io/downloads">Downloads IX</a> <a class="coption" style="text-shadow:.125em .125em 0 #1f1f1f;color:#555;text-decoration:none" href="https://parv66.github.io/random">Random LXIX</a> <a class="coption" style="text-shadow:.125em .125em 0 #1f1f1f;color:#555;text-decoration:none" href="https://parv66.github.io/contact">Associate II</a> <a class="coption" style="text-shadow:.125em .125em 0 #1f1f1f;color:#555;text-decoration:none" href="https://parv66.github.io/random/CDXX">???</a> <a style="color:#fff;text-decoration:none;text-shadow:.125em .125em 0 #3e3e3e;margin:0;margin-top:10px;cursor:default">Durability: 69 / 420</a> <a style="text-shadow:.125em .125em 0 #222;margin:0;color:#555;cursor:default">parv66:context_menu</a> <a style="text-shadow:.125em .125em 0 #222;margin:0;color:#555;cursor:default">NBT: 5 tag(s)</a></div>
+<div id="contextmenu" style="box-shadow: rgb(0, 0, 0) 2px 0px 0px 0px, rgb(0, 0, 0) 0px -2px 0px 0px, rgb(0, 0, 0) 0px 2px 0px 0px, rgb(0, 0, 0) -2px 0px 0px 0px; width: auto; height: auto; border: 2px solid rgb(44, 8, 99); position: fixed; background-color: rgba(16, 0, 16, 0.94); padding: 0.38em; font-family: minefont; margin: 0.125em 0.25em; z-index: 6420; top: 448px; left: 633px; display: none; flex-flow: column nowrap; place-content: center; align-items: flex-start;"><a style="margin:0;text-shadow:.125em .125em 0 #3e3e3e;color:#fff;cursor:default">Context Menu</a> <a style="color:#55F;text-shadow:.125em .125em 0 #232391;margin:0;cursor:default">Equipment</a><a class="coption" style="margin-top:10px;cursor:default;text-shadow: 0.125em 0.125em 0 #363636;color:#9f9f9f;text-decoration:none;">Accommodation I</a><a class="coption" style="text-shadow:.125em .125em 0 #1f1f1f;color:#555;text-decoration:none" href="https://parv66.github.io/about">Particularity IV</a> <a class="coption" style="text-shadow:.125em .125em 0 #1f1f1f;color:#555;text-decoration:none" href="https://parv66.github.io/creations">Creations III</a> <a class="coption" style="text-shadow:.125em .125em 0 #1f1f1f;color:#555;text-decoration:none" href="https://parv66.github.io/downloads">Downloads IX</a> <a class="coption" style="text-shadow:.125em .125em 0 #1f1f1f;color:#555;text-decoration:none" href="https://parv66.github.io/random">Random LXIX</a> <a class="coption" style="text-shadow:.125em .125em 0 #1f1f1f;color:#555;text-decoration:none" href="https://parv66.github.io/contact">Associate II</a> <a class="coption" style="text-shadow:.125em .125em 0 #1f1f1f;color:#555;text-decoration:none" href="https://parv66.github.io/random/CDXX">???</a> <a style="color:#fff;text-decoration:none;text-shadow:.125em .125em 0 #3e3e3e;margin:0;margin-top:10px;cursor:default">Durability: 69 / 420</a> <a style="text-shadow:.125em .125em 0 #222;margin:0;color:#555;cursor:default">parv66:context_menu</a> <a style="text-shadow:.125em .125em 0 #222;margin:0;color:#555;cursor:default">NBT: 5 tag(s)</a></div>
       <p>sidebar here</p><p> 
   </p><div class="maincage" style="z-index: 5;display: flex;width: 99%;flex-wrap: wrap;flex-direction: row;align-items: center;align-content: center;justify-content: center;">
-   <button id="tabbtnone"class="tabbtn mcbtn tabbtnone"><img src="https://parv66.github.io/icon/tabicons/article.gif"class="tabicon"><a class="tabtext">Articles</a><br><a class="tabtext2">3</a></button>
+   <button id="tabbtnone" class="tabbtn mcbtn tabbtnone tabbtnactive"><img src="https://parv66.github.io/icon/tabicons/article.gif" class="tabicon"><a class="tabtext">Articles</a><br><a class="tabtext2">3</a></button>
    <button id="tabbtntwo" class="tabbtn mcbtn tabbtntwo"><img src="https://parv66.github.io/icon/tabicons/cramped%20paper.gif" class="tabicon"><a class="tabtext">Junk</a><br><a class="tabtext2">3</a></button>
    <button id="tabbtnthree" class="tabbtn mcbtn tabbtnthree"><img src="https://parv66.github.io/icon/tabicons/links.gif" class="tabicon"><a class="tabtext">links</a><br><a class="tabtext2">8</a></button>
    <button id="tabbtnfour" class="tabbtn mcbtn tabbtnfour"><img src="https://parv66.github.io/icon/tabicons/gallery.gif" class="tabicon"><a class="tabtext">Gallery</a><br><a class="tabtext2">0</a></button>
-    <div id="tabone" class="tabindex tabone"></div>
-    <div id="tabtwo" class="tabindex tabtwo"></div>
-    <div id="tabthree" class="tabindex tabthree"></div>
-    <div id="tabfour" class="tabindex tabfour"></div>
+    <div id="tabone" class="tabindex tabone" style="">
+    <button class="artibtn">
+        <img class="articon" src="https://parv66.github.io/parv66.uwu.jpg">
+        <h5 class="artitle" style="/* text-shadow: 0.1em 0.1em 0 #917800; *//* color: #fff700; */">new!</h5>
+        <p class="artdesc" style="/* text-shadow: 0.1em 0.1em 0 #917800; *//* color: #fff700; */"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam feugiat ex quis tincidunt aliquet. Donec bibendum, augue in ullamcorper porttitor, nulla purus consectetur diam, non scelerisque odio quam sed urna </p>
+        <a class="artidate">14 March 2022</a>
+    </button>
+</div>
+    <div id="tabtwo" class="tabindex tabtwo" style="display: none;"></div>
+    <div id="tabthree" class="tabindex tabthree" style="display: none;"></div>
+    <div id="tabfour" class="tabindex tabfour" style="display: none;"></div>
    <div>
   <!-- <div class="u-fade-type-left js-scroll-trigger">ewh?</div><div class="u-fade-type-right js-scroll-trigger">ah yes *animation*</div><div class="u-fade-type-left js-scroll-trigger">sup???</div><div class="u-fade-type-right js-scroll-trigger">this is dumb!</div><div class="u-fade-type-left js-scroll-trigger">no u.</div> -->
  
@@ -41,5 +48,6 @@
 </div>
       </div>
       
-</body>
-</html>
+
+
+<audio src="https://parv66.github.io/random.click.ogg" id="btnsnd"></audio></body></html>
