--- a/index.html
+++ b/index.html
@@ -32,19 +32,14 @@
     <div id="tabone" class="tabindex tabone" style="height: max-content;">
     <button class="artibtn">
         <img class="articon" src="https://parv66.github.io/parv66.uwu.jpg">
-        <h5 class="artitle" style="/* text-shadow: 0.1em 0.1em 0 #917800; *//* color: #fff700; */">new!</h5>
-        <p class="artdesc" style="/* text-shadow: 0.1em 0.1em 0 #917800; *//* color: #fff700; */"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam feugiat ex quis tincidunt aliquet. Donec bibendum, augue in ullamcorper porttitor, nulla purus consectetur diam, non scelerisque odio quam sed urna </p>
-        <a class="artidate">14 March 2022</a>
+        <h5 class="artitle" style="text-shadow: 0.1em 0.1em 0 #917800;color: #fff700;">HELP!</h5>
+        <p class="artdesc" style="text-shadow: 0.1em 0.1em 0 #917800;color: #fff700;">I NEeed Suggestions i ran out of ideas please help rightclick and associate II and suggest somethigthanksloveyou!</p>
+        <a class="artidate">15 March 2022</a>
     </button>
 <button class="artibtn">
         <img class="articon" src="https://parv66.github.io/parv66.uwu.jpg">
-        <h5 class="artitle" style="/* text-shadow: 0.1em 0.1em 0 #917800; *//* color: #fff700; */">new!</h5>
-        <p class="artdesc" style="/* text-shadow: 0.1em 0.1em 0 #917800; *//* color: #fff700; */"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam feugiat ex quis tincidunt aliquet. Donec bibendum, augue in ullamcorper porttitor, nulla purus consectetur diam, non scelerisque odio quam sed urna </p>
-        <a class="artidate">14 March 2022</a>
-    </button><button class="artibtn">
-        <img class="articon" src="https://parv66.github.io/parv66.uwu.jpg">
-        <h5 class="artitle" style="/* text-shadow: 0.1em 0.1em 0 #917800; *//* color: #fff700; */">new!</h5>
-        <p class="artdesc" style="/* text-shadow: 0.1em 0.1em 0 #917800; *//* color: #fff700; */"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam feugiat ex quis tincidunt aliquet. Donec bibendum, augue in ullamcorper porttitor, nulla purus consectetur diam, non scelerisque odio quam sed urna </p>
+        <h5 class="artitle" style="/* text-shadow: 0.1em 0.1em 0 #917800; *//* color: #fff700; */">contribute?</h5>
+        <p class="artdesc" style="/* text-shadow: 0.1em 0.1em 0 #917800; *//* color: #fff700; */">please if you could, take a screeen shot of this site and send to discord no matter how big you screen is.<br><span style="text-shadow: 0.1em 0.1em 0 #783302;color: #ffa500;">Edit: i forgot i had inspect element :facepalm:</span></p>
         <a class="artidate">14 March 2022</a>
     </button></div>
     <div id="tabtwo" class="tabindex tabtwo" style="display: none;"></div>
