--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </button>
 <button class="artibtn">
         <img class="articon" src="https://parv66.github.io/parv66.uwu.jpg">
-        <h5 class="artitle" style="/* text-shadow: 0.1em 0.1em 0 #917800; *//* color: #fff700; */">contribute?</h5>
+        <h5 class="artitle" style="/* text-shadow: 0.1em 0.1em 0 #917800; *//* color: #fff700; */">help</h5>
         <p class="artdesc" style="/* text-shadow: 0.1em 0.1em 0 #917800; *//* color: #fff700; */">please if you could, take a screeen shot of this site and send to discord no matter how big you screen is.<br><span style="text-shadow: 0.1em 0.1em 0 #783302;color: #ffa500;">Edit: i forgot i had inspect element :facepalm:</span></p>
         <a class="artidate">14 March 2022</a>
     </button></div>
