--- a/index.html
+++ b/index.html
@@ -30,18 +30,31 @@
    <button id="tabbtnthree" class="tabbtn mcbtn tabbtnthree"><img src="https://parv66.github.io/icon/tabicons/links.gif" class="tabicon"><a class="tabtext">links</a><br><a class="tabtext2">8</a></button>
    <button id="tabbtnfour" class="tabbtn mcbtn tabbtnfour"><img src="https://parv66.github.io/icon/tabicons/gallery.gif" class="tabicon"><a class="tabtext">Gallery</a><br><a class="tabtext2">0</a></button>
     <div id="tabone" class="tabindex tabone" style="height: max-content;">
-    <button class="artibtn">
+    <button class="artibtn mcbtn">
         <img class="articon" src="https://parv66.github.io/parv66.uwu.jpg">
         <h5 class="artitle" style="text-shadow: 0.1em 0.1em 0 #917800;color: #fff700;">HELP!</h5>
         <p class="artdesc" style="text-shadow: 0.1em 0.1em 0 #917800;color: #fff700;">I NEeed Suggestions i ran out of ideas please help rightclick and associate II and suggest somethigthanksloveyou!</p>
         <a class="artidate">15 March 2022</a>
     </button>
-<button class="artibtn">
+<button class="artibtn mcbtn">
         <img class="articon" src="https://parv66.github.io/parv66.uwu.jpg">
         <h5 class="artitle" style="/* text-shadow: 0.1em 0.1em 0 #917800; *//* color: #fff700; */">help</h5>
         <p class="artdesc" style="/* text-shadow: 0.1em 0.1em 0 #917800; *//* color: #fff700; */">please if you could, take a screeen shot of this site and send to discord no matter how big you screen is.<br><span style="text-shadow: 0.1em 0.1em 0 #783302;color: #ffa500;">Edit: i forgot i had inspect element :facepalm:</span></p>
         <a class="artidate">14 March 2022</a>
-    </button></div>
+    </button>
+      <button class="artibtn mcbtn">
+        <img class="articon" src="https://parv66.github.io/parv66.uwu.jpg">
+        <h5 class="artitle" style="/* text-shadow: 0.1em 0.1em 0 #917800; *//* color: #fff700; */">hehe</h5>
+        <p class="artdesc" style="/* text-shadow: 0.1em 0.1em 0 #917800; *//* color: #fff700; */">uh i was bored and away for a break</p>
+        <a class="artidate">16 March 2022</a>
+    </button>
+         <button class="artibtn mcbtn">
+        <img class="articon" src="https://parv66.github.io/parv66.uwu.jpg">
+        <h5 class="artitle" style="/* text-shadow: 0.1em 0.1em 0 #917800; *//* color: #fff700; */">PLS</h5>
+        <p class="artdesc" style="/* text-shadow: 0.1em 0.1em 0 #917800; *//* color: #fff700; */">please suggest somethinf i neeedittttttttttttttalso if title is more tha 4 letters it breaks the css and makes page wonkey</p>
+        <a class="artidate">16 March 2022</a>
+    </button>
+      </div>
     <div id="tabtwo" class="tabindex tabtwo" style="display: none;"></div>
     <div id="tabthree" class="tabindex tabthree" style="display: none;"></div>
     <div id="tabfour" class="tabindex tabfour" style="display: none;"></div>
