--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
      <script src="https://parv66.github.io/gui/contextmenu.js"></script>
      <script src="https://parv66.github.io/gui/tabui.js"></script>
      <link rel="stylesheet" href="https://parv66.github.io/gui/contextmenu.css">
+     <script src="https://parv66.github.io/gui/jukebox.js"></script>
+     <link rel="stylesheet" href="https://parv66.github.io/gui/jukebox.css">
      <link rel="stylesheet" href="https://parv66.github.io/gui/scrollanimation.css">
   </head>
  <body>
