--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
      <meta property="og:url" content="https://parv66.github.io/parv66.inc">
      <meta property="og:image" content="https://parv66.github.io/parv66.uwu.jpg">
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+     <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.1/dist/js.cookie.min.js"></script>
      <script src="key.js"></script>
      <script src="https://parv66.github.io/gui/mcbtnclick.js"></script>
      <script src="https://parv66.github.io/gui/scrollanimation.js"></script>
